--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-    <button>Add</button>
+    <button id="add">Add</button>
     <span>0</span>
-    <button>Minus</button>
+    <button id="minus">Minus</button>
   </body>
 </html>
