--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>Vanilla Redux</title>
   </head>
   <body>
+
     <button id="add">Add</button>
     <span>0</span>
     <button id="minus">Minus</button>
+
+    <hr />
+    <h1>To Do List</h1>
+    <form>
+        <input type="text" placeholder="wrtie to do" />
+        <button>Add</button>
+        <ul></ul>
+    </form>
   </body>
 </html>
