--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,6 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-
-    <button id="add">Add</button>
-    <span>0</span>
-    <button id="minus">Minus</button>
-
-    <hr />
-    <h1>To Do List</h1>
-    <form>
-        <input type="text" placeholder="wrtie to do" />
-        <button>Add</button>
-        <ul></ul>
-    </form>
+    <div id="root"></div>
   </body>
 </html>
